--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node app.mjs"
   },
   "repository": {
     "type": "git",
@@ -16,7 +16,11 @@
     "url": "https://github.com/cyclic-software/starter-express-api/issues"
   },
   "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
-  "dependencies": {
-    "express": "^4.18.2"
-  }
+    "dependencies": {
+        "@solana/pay": "^0.2.5",
+        "@solana/spl-token": "^0.3.8",
+        "@solana/web3.js": "^1.78.0",
+        "auth": "^0.0.9",
+        "bignumber.js": "^9.1.1"
+    }
 }
