--- a/package.json
+++ b/package.json
@@ -1,26 +1,22 @@
 {
-  "name": "starter-express-api",
+  "name": "solana-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.mjs",
   "scripts": {
-    "start": "node app.mjs"
+    "start": "node app.mjs",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cyclic-software/starter-express-api.git"
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/cyclic-software/starter-express-api/issues"
-  },
-  "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
-    "dependencies": {
-        "@solana/pay": "^0.2.5",
-        "@solana/spl-token": "^0.3.8",
-        "@solana/web3.js": "^1.78.0",
-        "auth": "^0.0.9",
-        "bignumber.js": "^9.1.1"
-    }
+  "dependencies": {
+    "@solana/pay": "^0.2.5",
+    "@solana/spl-token": "^0.3.8",
+    "@solana/web3.js": "^1.78.0",
+    "axios": "^1.4.0",
+    "bignumber.js": "^9.1.1",
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2"
+  }
 }
