--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.mjs",
   "scripts": {
     "start": "node app.mjs",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "sync": "npm install && npm ci"
   },
   "keywords": [],
   "author": "",
