--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm update && node app.mjs",
+    "start": "node app.mjs",
+    "build": "npm update",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
