--- a/package.json
+++ b/package.json
@@ -16,10 +16,8 @@
     "@solana/spl-token": "^0.3.8",
     "@solana/web3.js": "^1.78.0",
     "axios": "^1.4.0",
-    "bee-queue": "^1.7.1",
     "bignumber.js": "^9.1.1",
     "body-parser": "^1.20.2",
-    "express": "^4.18.2",
-    "uuid": "^9.0.1"
+    "express": "^4.18.2"
   }
 }
